[package]
name = "converttool"
version = "0.0.0"
description = "A Free convert tool"
authors = ["you"]
license = ""
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
tauri = { version = "1.5", features = ["shell-open"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = {version = "0.31.0", features = ["bundled"] }
j4rs = "0.17.1"
once_cell = "1.19.0"
lazy_static = "1.4.0"
thread_local = "1.1.7"
jni = { version = "0.21.1", features = ["invocation"] }
moka = { version = "0.12.5", features = ["sync"] }
futures = "0.3.30"
tokio = { version = "1.36.0", features = ["full"] }
crossbeam-channel = "0.5.12"
sled = "0.34.7"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
